support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_badchar.i
%module xxx

#define f@oo(a,x)   a + x
#define foo(a@,x)   a + x

